Fix overflow

--- a/src/styles/Keys.scss
+++ b/src/styles/Keys.scss
@@ -19,7 +19,7 @@
   display: flex;
   flex-direction: row;
   margin: 0 auto;
-  overflow: scroll;
+  overflow: overflow-x;
 }
 .column {
   display: flex;
