--- a/src/styles/Level1.scss
+++ b/src/styles/Level1.scss
@@ -7,6 +7,7 @@
 
   .pitches {
     display: flex;
+    overflow: hidden;
 
     .column {
       flex-grow: 1;
